--- a/negocio/negocio.csproj
+++ b/negocio/negocio.csproj
@@ -41,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoDatos.cs" />
     <Compile Include="DiscosNegocio.cs" />
+    <Compile Include="EdicionNegocio.cs" />
+    <Compile Include="EstilosNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
